--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -48,6 +48,7 @@
   align-items: center;
   padding: 0 20px;
   width: 100vw;
+  background-color: #264653;
 }
 .hidden{
   display: none;
@@ -60,6 +61,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  height: 100vh;
 }
 .sidebar-sec p{
   width: 100%;
